cnp/cnp-strict-netperf-only.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netperf-policy-standard
spec:
  endpointSelector:
    matchLabels:
      run: netperf-tujuan
  ingress:
  - fromEndpoints:
    - matchLabels:
        run: netperf-sumber
    toPorts:
    - ports:
      - port: '5200'
        endPort: 5215
        protocol: TCP
      - port: '5300'
        endPort: 5315
        protocol: TCP
